--- a/index.html
+++ b/index.html
@@ -4,59 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.44/moment-timezone-with-data-1970-2030.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.44/moment-timezone-with-data-10-year-range.min.js"></script>
   <title>World Clock - Alexa Cacchiola</title>
 </head>
 <body>
   <div class="container">
     <h1>World Clock</h1>
-    <select id="citySelector">
+    
+    <select id="city">
       <option value="">Select a City</option>
-      <option value="Miami">Miami</option>
-      <option value="Austin">Austin</option>
-      <option value="Charlotte">Charlotte</option>
-      <option value="Seattle">Seattle</option>     
+      <option value="current">My Current Location</option>
+      <option value="America/New_York">Miami</option>
+      <option value="America/Chicago">Austin</option>
+      <option value="America/New_York">Charlotte</option>
+      <option value="America/Los_Angeles">Seattle</option>
     </select>
 
-    <div class="city" id="Miami">
-      <div>
-        <h2>Miami</h2>
-        <div class="date" id="MiamiDate"></div>
+    <div id = "cities">
+      <div class="city" id="miami">
+        <div>
+          <h2>Miami</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
-      <div class="time" id="MiamiTime"></div>
-    </div>
 
-    <div class="city" id="Austin">
-      <div>
-        <h2>Austin</h2>
-        <div class="date" id="AustinDate"></div>
+      <div class="city" id="austin">
+        <div>
+          <h2>Austin</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
-      <div class="time" id="AustinTime"></div>
-    </div>
 
-    <div class="city" id="Charlotte">
-      <div>
-        <h2>Charlotte</h2>
-        <div class="date" id="CharlotteDate"></div>
+      <div class="city" id="charlotte">
+        <div>
+          <h2>Charlotte</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
-      <div class="time" id="CharlotteTime"></div>
-    </div>
 
-    <div class="city" id="Seattle">
-      <div>
-        <h2>Seattle</h2>
-        <div class="date" id="SeattleDate"></div>
+      <div class="city" id="seattle">
+        <div>
+          <h2>Seattle</h2>
+          <div class="date"></div>
+        </div>
+        <div class="time"></div>
       </div>
-      <div class="time" id="SeattleTime"></div>
     </div>
   </div>
-</body>
-</html>
+  
   <footer>
     <p>
       This project was coded by <a href="https://github.com/codergirlshecodes" target="_blank"><strong>Alexa Cacchiola</strong></a> and is
-      <a href="https://github.com/codergirlshecodes/world-clock-single-location" target="_blank"> on GitHub</a> and
+      <a href="https://github.com/codergirlshecodes/world-clock-single-location" target="_blank">on GitHub</a> and
       <a href="https://main--elegant-dolphin-f01037.netlify.app/" target="_blank">hosted on Netlify</a>
     </p>
   </footer>
